fixed spacing and resume link on about

--- a/styles/all.css
+++ b/styles/all.css
@@ -353,13 +353,11 @@ h4 {
 
 .intro {
   margin-top: 110px;
-  margin-bottom: 100px;
 }
 
 @media (max-width: 600px) {
   .intro {
     margin-top: 120px;
-    margin-bottom: 120px;
   }
 }
 
